<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_corner"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/proceed_to_save"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/view_border"
            android:padding="2dp">

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lower_corner"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:weightSum="100">

        <Button
            android:id="@+id/close_preview_image_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="8dp"
            android:layout_weight="50"
            android:background="@drawable/cancel_btn_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/proceed_preview_image_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="50"
            android:background="@drawable/capture_btn_background"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>