<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="05dp"
    android:background="@drawable/corner_round"
    android:paddingLeft="05dp"
    android:paddingTop="05dp"
    android:paddingRight="05dp"
    android:paddingBottom="50dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_detail_not_found_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:scaleType="fitXY"
            android:src="@drawable/close_dialog" />

        <LinearLayout
            android:id="@+id/entityLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/radio_group_heading_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top|center"
                android:text="@string/entity_detail"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_card_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ward_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:text="@string/entity_type"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/entity_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/spinner_background_for_house_type" />

            <EditText
                android:id="@+id/etEntityCount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/view_border"
                android:ems="10"
                android:hint="@string/enter_entity_count"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnVerified"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>