<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="#fff">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/maps"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/mapFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="07"
                        android:background="@drawable/line_change_background"
                        android:elevation="10dp"
                        android:orientation="horizontal"
                        android:weightSum="6">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:gravity="center">

                            <Button
                                android:id="@+id/pre_line_btn"
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:background="@drawable/prev_line_icon"
                                android:onClick="onPrevClick" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/current_line_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center|bottom"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="top|center"
                                android:text="@string/line_number"
                                android:textColor="@color/dark_gray"
                                android:textSize="10sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:gravity="center">

                            <Button
                                android:id="@+id/next_line_btn"
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:background="@drawable/next_line_icon"
                                android:onClick="onNextClick" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="03"
                        android:background="@drawable/line_change_background"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="visible"
                        android:weightSum="4">

                        <TextView
                            android:id="@+id/total_marks_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center|bottom"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="top|center"
                            android:text="@string/home"
                            android:textColor="@color/dark_gray"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="4dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/line_change_background"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/date_and_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center|bottom"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="top|center"
                        android:text="@string/last_scan_time"
                        android:textColor="@color/dark_gray"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_entity"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_photo_camera_24" />

                <TextView
                    android:id="@+id/entity_image_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top|center"
                    android:text="@string/entity_image"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottomLayout"
                android:layout_below="@+id/topLayout" />

        </RelativeLayout>

    </FrameLayout>


</LinearLayout>